# once

./: .env  Cargo.toml  README.md  diesel.toml
.github/workflows/: docker-image.yml
migrations/2025-08-10-165457_create_client_auth/: down.sql  up.sql
once-common/: Cargo.toml  README.md
once-common/migrations/2025-12-10-003547-0000_add_grants_to_clients_fk/: down.sql  up.sql
once-common/src/: lib.rs  logging.rs  oauth.rs
once-common/src/db/: schema.rs
once-common/src/oauth/: client_cert_data.rs  dnie_endpoint.rs  mtls_access_token_extension.rs  mtls_auth_extension.rs  pg_authorizer.rs  pg_issuer.rs  pg_registrar.rs
once-mtls-server/: Cargo.toml  Dockerfile
once-mtls-server/assets/css/: auth.css
once-mtls-server/src/: app_state.rs  main.rs  routes.rs  solicitor.rs  testing.rs
once-mtls-server/src/middleware/: client_cert_auth.rs
once-mtls-server/src/routes/: authorize.rs  token.rs
once-mtls-server/templates/: authorize.html
once-pub-server/: .env  Cargo.toml
once-pub-server/src/: app_state.rs  main.rs  routes.rs
src/: app_state.rs  main.rs  models.rs  oauth.rs  routes.rs  schema.rs
src/middleware/: client_cert_auth.rs  mod.rs
src/oauth/: dnie_endpoint.rs  pg_registrar.rs  rsa_jwt_issuer.rs  test_solicitor.rs
src/routes/: authorize.rs  token.rs
