[package]
name = "servidor-autenticacion-dnie"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"], default-features = false }
tower = "0.5"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs", "tls12", "logging"], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pki-types = { version = "1.13", default-features = false }
rustls-webpki = { version = "0.103", features = ["aws-lc-rs"], default-features = false }
futures-util = "0.3"
x509-parser = "0.18"
dotenvy = "0.15"
oxide-auth = "0.6.1"
oxide-auth-axum = "0.6.0"
oxide-auth-async = "0.2.1"
diesel-async = { version = "0.7.4", features = ["bb8", "postgres"] }
async-trait = "0.1.89"
log = "0.4.29"
env_logger = "0.11.8"

servidor-autenticacion-dnie-common = { path = "/home/eltu/dev/rust/servidor-autenticacion-dnie-common", features = ["logging"] }
