[workspace]
members = ["once-mtls-server", "once-common", "once-pub-server"]

resolver = "3"

[workspace.dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"], default-features = false }
tower = "0.5"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs", "tls12", "logging"], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pki-types = { version = "1.13", default-features = false }
rustls-webpki = { version = "0.103", features = ["aws-lc-rs"], default-features = false }
futures-util = "0.3"
x509-parser = "0.18"
dotenvy = "0.15"
openidconnect = { version = "3.5.0", default-features = false }
oxide-auth = { git = "https://github.com/atan2l/oxide-auth" }
oxide-auth-axum = { git = "https://github.com/atan2l/oxide-auth" }
oxide-auth-async = { git = "https://github.com/atan2l/oxide-auth" }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
diesel = { version = "2.3", features = ["uuid", "postgres", "chrono"] }
diesel-async = { version = "0.7", features = ["bb8", "pool", "postgres"] }
async-trait = "0.1.89"
argon2 = "0.5.3"
chrono = "0.4.42"
rand = "0.9.2"
sha2 = "0.10.9"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
log = "0.4.29"
env_logger = "0.11.8"
askama = "0.14.0"
tower-http = "0.6.8"
