[package]
name = "once-mtls-server"
version = "0.1.0"
edition = "2024"

[dependencies]
once-common = { path = "../once-common", features = ["logging"] }

axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
rustls = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
axum-server = { workspace = true }
diesel-async = { workspace = true }
futures-util = { workspace = true }
oxide-auth = { workspace = true }
oxide-auth-async = { workspace = true }
oxide-auth-axum = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls-webpki = { workspace = true }
x509-parser = { workspace = true }
askama = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
