[package]
name = "once-pub-server"
version = "0.1.0"
edition = "2024"

[dependencies]
once-common = { path = "../once-common", features = ["logging"] }

axum = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
oxide-auth = { workspace = true }
oxide-auth-async = { workspace = true }
oxide-auth-axum = { workspace = true }
axum-server = { workspace = true }
diesel-async = { workspace = true }
rustls = {workspace = true}
